ajustado paddindo nav em tela cheia

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="FooterTexto">
 
         </div>
-        <div class="FoterLogo">
+        <div class="FooterLogo">
 
         </div>
         <div class="FooterContatos">
@@ -94,7 +94,7 @@
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">ENVIAR</button>
                 </div>
               </form>
 
