--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <div class="FooterTexto">
 
         </div>
-        <div class="FooterLogo">
+        <!-- <div class="FooterLogo">
 
-        </div>
+        </div> -->
         <div class="FooterContatos">
 
         </div>
@@ -78,20 +78,21 @@
         </div>
         <div class="FormFooter">
             <form >
+                <h3>AGENDE UMA <br>PRO.ZZA</h3>
                 <div class="rows">
                 <div class="form-group ajusteInputAreaEmail ">
                   <label for="exampleInputEmail1"></label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="NOME:">
                   <small id="emailHelp" class="form-text text-muted"></small>
 
                 </div>
                 <div class="form-group ajusteInputAreaPassowd ">
                   <label for="exampleInputPassword1"></label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="TEL:">
                 </div>
-                <div class="form-group ajusteDaTextArea">
-                  <label for="exampleFormControlTextarea1"></label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                <div class="form-group ajusteDaTextArea ">
+                  <label for="exampleFormControlTextarea1 " ></label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1"  placeholder="MENSAGEN:" rows="4" ></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-primary">ENVIAR</button>
@@ -100,7 +101,9 @@
 
         </div>
 
+        <div class="FooterLogo">
 
+        </div>
 
 
         
