--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="styleV5.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans&family=Montserrat:wght@800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -67,9 +69,7 @@
         <div class="FooterTexto">
 
         </div>
-        <!-- <div class="FooterLogo">
-
-        </div> -->
+     
         <div class="FooterContatos">
 
         </div>
@@ -95,7 +95,7 @@
                   <textarea class="form-control" id="exampleFormControlTextarea1"  placeholder="MENSAGEN:" rows="4" ></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary">ENVIAR</button>
+                <button type="submit" class="btn ">ENVIAR</button>
                 </div>
               </form>
 
