ajustado a footerlogo no tamanho full

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </nav>
 
         <div class="CorpoTexto text-center">
-            <h3>CLIENTES</h3>
+            <h3 class="clienteH3">CLIENTES</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur dolor consequuntur totam, reprehenderit veniam minus culpa debitis possimus iste laborum magni ducimus autem amet iusto. Iure ipsum ipsam repellatrepellatrepellat repellat assumenda.
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur dolor consequuntur totam, reprehenderit veniam minus culpa debitis possimus iste laborum magni ducimus autem amet iusto. Iure ipsum </p>
         </div>
