criado alinhamento na tela full

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur dolor consequuntur totam, reprehenderit veniam minus culpa debitis possimus iste laborum magni ducimus autem amet iusto. Iure ipsum </p>
         </div>
 
-        <div class="CorpoFoto">
+        <div class="CorpoFotoClinetes">
         
         </div>
         <div class="FooterTexto">
