--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="shortchut icon" href="./favicon.ico">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="styleV5.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans&family=Montserrat:wght@800&display=swap" rel="stylesheet">
-
+<title>PROZZA</title>
 </head>
 
 <body>
@@ -80,17 +80,17 @@
             <form >
                 <h3>AGENDE UMA <br>PRO.ZZA</h3>
                 <div class="rows">
-                <div class="form-group ajusteInputAreaEmail ">
+                <div class="form-group ajusteInputAreaNome">
                   <label for="exampleInputEmail1"></label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="NOME:">
                   <small id="emailHelp" class="form-text text-muted"></small>
 
                 </div>
-                <div class="form-group ajusteInputAreaPassowd ">
+                <div class="form-group ajusteInputAreaTelefone">
                   <label for="exampleInputPassword1"></label>
                   <input type="text" class="form-control" id="exampleInputPassword1" placeholder="TEL:">
                 </div>
-                <div class="form-group ajusteDaTextArea ">
+                <div class="form-group ajusteDaTextMensagem ">
                   <label for="exampleFormControlTextarea1 " ></label>
                   <textarea class="form-control" id="exampleFormControlTextarea1"  placeholder="MENSAGEN:" rows="4" ></textarea>
                 </div>
@@ -103,6 +103,34 @@
 
         <div class="FooterLogo">
 
+        </div>
+       <div class="contato">
+        <p>(45) 99964-4757</p>
+        <p>@conteudoprozza</p>
+       </div>
+        <div class="NavLadoDireito">
+         
+            <ul >
+               
+                <li >
+                   <a class="nav-link" href="#">QUEM SOMOS </a>
+                </li>
+                <li >
+                    <a class="nav-link" href="#">O QUE FAZEMOS</a>
+                </li>
+                <li >
+                    <a class="nav-link" href="#">PORTIFÓLIO</a>
+                </li>
+                <li >
+                    <a class="nav-link" href="#">CLINETES</a>
+                </li>
+                <li >
+                    <a class="nav-link" href="#">IMPRENSA</a>
+                </li>
+                <li >
+                    <a class="nav-link" href="#">AGENDE UMA PROZZA</a>
+                </li>
+            </ul>
         </div>
 
 
